<resources>
    <string name="app_name">Movie</string>
    <string name="avengers_end_game_banner">Avengers: End Game banner</string>
    <string name="back">Back</string>
    <string name="age_limit">13+</string>
    <string name="title">Avengers:\nEnd Game</string>
    <string name="genre">Action, Adventure, Fantasy</string>
    <string name="film_reviews">125 Reviews</string>
    <string name="storyline_header">Storyline</string>
    <string name="storyline_desc">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list">Movies list</string>
    <string name="rating_default">13+</string>
    <string name="genres_on_card">Action, Adventure, Drama</string>
    <string name="movie_title_card">Avengers: End Game</string>
    <string name="movie_duration">137 min</string>
    <string name="review_count">125 reviews</string>
</resources>