<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".FragmentMoviesList">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/background">
        
        <Button
            android:id="@+id/toolbar"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:gravity="start|center_vertical"
            android:text="@string/movies_list"
            android:background="?android:attr/selectableItemBackground"
            android:textAllCaps="false"
            app:drawableLeftCompat="@drawable/ic_combined_shape"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_movie"
            android:layout_width="170dp"
            android:layout_height="296dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:cardBackgroundColor="@color/view_card_bg"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:rippleColor="@android:color/transparent"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_bg">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="248dp"
                    android:scaleType="center"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_avengers"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/gradient_movie_card"
                    app:layout_constraintBottom_toBottomOf="@+id/img_poster"
                    app:layout_constraintEnd_toEndOf="@+id/img_poster"
                    app:layout_constraintStart_toStartOf="@+id/img_poster"
                    app:layout_constraintTop_toTopOf="@+id/img_poster" />

                <TextView
                    android:id="@+id/age_rating"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_rounded"
                    android:gravity="center"
                    android:text="@string/rating_default"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/movie_like"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintBottom_toBottomOf="@+id/age_rating"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/age_rating"
                    app:srcCompat="@drawable/ic_like" />

                <TextView
                    android:id="@+id/movie_genres"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/genres_on_card"
                    android:textColor="@color/accent"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toTopOf="@+id/ratingBar"
                    app:layout_constraintStart_toStartOf="parent" />

                <RatingBar
                    android:id="@+id/ratingBar"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:isIndicator="true"
                    android:numStars="5"
                    android:rating="4"
                    android:scaleX=".8"
                    android:scaleY=".8"
                    android:theme="@style/RatingBar"
                    app:layout_constraintBottom_toBottomOf="@+id/img_poster"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/reviews_count"
                    style="@style/ReviewTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="125 reviews"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toBottomOf="@+id/ratingBar"
                    app:layout_constraintStart_toEndOf="@+id/ratingBar"
                    app:layout_constraintTop_toTopOf="@+id/ratingBar"
                    tools:ignore="RtlSymmetry"
                    tools:text="125 Reviews" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_title_card"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray"
                    app:layout_constraintBottom_toTopOf="@+id/movie_duration"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_poster"
                     />

                <TextView
                    android:id="@+id/movie_duration"
                    style="@style/ReviewTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="bottom"
                    android:text="@string/movie_duration"
                    android:textSize="8sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>